<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Bobbit Nava</string>
    <string name="library">Library</string>
    <string name="playlists">Playlists</string>
    <string name="now_playing">Now Playing</string>
    <string name="equalizer">Equalizer</string>
    <string name="search_hint">Search songs…</string>
    <string name="no_songs">No songs found</string>
    <string name="no_playlists">No playlists yet\nTap + to create one</string>
    <string name="create_playlist">New Playlist</string>
    <string name="playlist_name">Playlist name</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="delete">Delete</string>
    <string name="rename">Rename</string>
    <string name="songs_count">%d songs</string>
    <string name="permission_required">Storage permission is required to play local music</string>
    <string name="unknown_artist">Unknown Artist</string>
    <string name="unknown_album">Unknown Album</string>
    <string name="shuffle">Shuffle</string>
    <string name="repeat">Repeat</string>
    <string name="queue">Queue</string>
    <string name="play_all">Play All</string>
    <string name="sort">Sort</string>
    <string name="sort_title">Title</string>
    <string name="sort_artist">Artist</string>
    <string name="sort_duration">Duration</string>
    <string name="set_ringtone">Set as ringtone</string>
    <string name="sleep_timer">Sleep timer</string>
    <string name="already_in_playlist">Already in this playlist</string>
    <string name="added_to_playlist">Added to %s</string>
    <string name="repeat_off">Normal</string>
    <string name="repeat_all">Repeat all</string>
    <string name="repeat_one">Repeat one</string>
    <string name="new_title">New title</string>
    <string name="renamed">Renamed</string>
    <string name="empty_playlist">This playlist is empty</string>
    <string name="remove_from_playlist">Remove from playlist</string>
</resources>
